# glia-fab

./: .gitignore  package.json
.cursor/: scratchpad.md  scratchpad_v1.md
.dev-kernel/: config.yaml
.github/workflows/: ci.yml  fab-gate.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml
apps/glia-fab-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/glia-fab-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/glia-fab-desktop/src-tauri/src/: main.rs
dev-kernel/: .gitignore  README.md  pyproject.toml
dev-kernel/docs/architecture/: data-model.md  fab-critics.md  fab-gate-logic.md  fab-iteration-loop.md  fab-overview.md  fab-priors-scaffolds.md  fab-render-harness.md  fab-schemas.md  failure-handling.md  observability.md  overview.md  quality-gates.md  scheduling.md  security.md  speculate-vote.md  toolchain-adapters.md  workcell-contract.md
dev-kernel/docs/guides/: configuration.md  getting-started.md
dev-kernel/examples/: config-minimal.yaml  config-python.yaml  config.yaml  manifest.json  proof.json
dev-kernel/schemas/: event.schema.json  manifest.schema.json  proof.schema.json
dev-kernel/schemas/fab/: asset-proof.schema.json  critic-report.schema.json  gate-verdict.schema.json  run-manifest.schema.json
dev-kernel/scripts/: deploy.sh
dev-kernel/src/dev_kernel/: __init__.py  cli.py
dev-kernel/src/dev_kernel/adapters/: __init__.py  base.py  blender.py  claude.py  codex.py  crush.py  opencode.py  outora.py  router.py
dev-kernel/src/dev_kernel/fab/: __init__.py  config.py  gate.py  godot.py  iteration.py  multi_category.py  regression.py  render.py  templates.py  vote_pack.py
dev-kernel/src/dev_kernel/fab/critics/: __init__.py  _optional_deps.py  alignment.py  category.py  cli.py  geometry.py  realism.py
dev-kernel/src/dev_kernel/fab/scaffolds/: __init__.py  base.py  car_scaffold.py  cli.py  registry.py  study_pod.py  sverchok.py
dev-kernel/src/dev_kernel/gates/: __init__.py  flaky.py  runner.py
dev-kernel/src/dev_kernel/kernel/: __init__.py  config.py  dispatcher.py  escalation.py  init.py  routing.py  runner.py  scheduler.py  status.py  verifier.py
dev-kernel/src/dev_kernel/mcp/: __init__.py  server.py
dev-kernel/src/dev_kernel/observability/: __init__.py  events.py  history.py  stats.py
dev-kernel/src/dev_kernel/state/: __init__.py  manager.py  models.py
dev-kernel/src/dev_kernel/workcell/: __init__.py  cleanup.py  cli.py  list.py  manager.py
dev-kernel/tests/fab/: __init__.py  test_godot_gate.py  test_integration.py
dev-kernel/tests/fixtures/beads/: deps.jsonl  issues.jsonl
dev-kernel/tests/integration/: __init__.py  conftest.py  test_kernel_e2e.py
dev-kernel/tests/unit/: test_adapters.py  test_dispatcher.py  test_scheduler.py  test_state_manager.py
docs/: fab_desktop_spec.md  fab_spec_details.md  fab_spec_summary.md
fab/ci/: Dockerfile.blender
fab/gates/: architecture_realism_v001.yaml  car_realism_v001.yaml  furniture_realism_v001.yaml  godot_integration_v001.yaml  interior_library_v001.yaml
fab/godot/: CONTRACT.md  README.md
fab/outora-library/: AGENTS.md  README.md  pyproject.toml
fab/outora-library/architecture/: AGENTS.md  import_playbook.md  mega_library_concept.md  plan1.md  sverchok_notes.md
fab/outora-library/assets/models/: gothic_library_2_cycles.blend  outora_library.blend  outora_library_v0.blend  scratchpad.blend
fab/outora-library/blender/: Gothic_Kit_for_sketchfab.blend  add_furniture.py  add_personal_items.py  add_warm_lighting.py  apply_style.py  bake_gothic_v2.py  blockout_generate.py  cleanup_skybox.py  concrete_table_desk.glb  create_glyph.py  create_spritesheet.py  debug_sverchok.py  export_fab_game_glb.py  export_gothic_glb.py  export_sections_glb.py  gate_validation.py  glyph.blend  gothic_kit_generator.py  gothic_lighting.py  gothic_materials.py  import_gothic_reference.py  import_skybox.py  inspect_desk_glb.py  integrate_assets.py  materials_outora_variants.py  optimize_glb.py  outora_library_v0.1.1.blend  outora_library_v0.2.0.blend  outora_library_v0.3.0.blend  outora_library_v0.4.0.blend  render_eevee_preview.py  render_library_preview.py  run_headless.py  run_integration.py  run_pipeline.py  setup_cameras.py  setup_concrete_desk.py  setup_initial_pods.py  setup_lighting.py  sverchok_bake.py  (+3 more)
fab/outora-library/export/: glyph.glb  space_gel_drip_atlas.json
fab/outora-library/licenses/: README.md
fab/outora-library/src/outora_library/: __init__.py  game_contract.py  paths.py
fab/outora-library/viewer/: README.md  index.html
fab/outora-library/viewer/assets/wings/: crossing.glb
(+52 files in other folders)
