[package]
name = "glia_fab_desktop"
version = "0.1.0"
description = "Glia Fab Desktop (Mission Control)"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
dirs = "5.0"
mime_guess = "2.0.5"
portable-pty = "0.8.1"
keyring = "3.6.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
time = { version = "0.3.37", features = ["formatting"] }
tiny_http = "0.12.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify = "6.1"
